; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_nic_main.c_nicpf_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/vnic/extr_nic_main.c_nicpf_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nicpf = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @nicpf_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nicpf_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nicpf*, align 8
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32 0, i32* %4, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call %struct.nicpf* @device_get_softc(i32 %5)
  store %struct.nicpf* %6, %struct.nicpf** %3, align 8
  %7 = load %struct.nicpf*, %struct.nicpf** %3, align 8
  %8 = getelementptr inbounds %struct.nicpf, %struct.nicpf* %7, i32 0, i32 1
  %9 = call i32 @callout_drain(i32* %8)
  %10 = load %struct.nicpf*, %struct.nicpf** %3, align 8
  %11 = getelementptr inbounds %struct.nicpf, %struct.nicpf* %10, i32 0, i32 0
  %12 = call i32 @mtx_destroy(i32* %11)
  %13 = load %struct.nicpf*, %struct.nicpf** %3, align 8
  %14 = call i32 @nic_unregister_interrupts(%struct.nicpf* %13)
  %15 = load %struct.nicpf*, %struct.nicpf** %3, align 8
  %16 = call i32 @nicpf_free_res(%struct.nicpf* %15)
  %17 = load i32, i32* %2, align 4
  %18 = call i32 @pci_disable_busmaster(i32 %17)
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local %struct.nicpf* @device_get_softc(i32) #1

declare dso_local i32 @callout_drain(i32*) #1

declare dso_local i32 @mtx_destroy(i32*) #1

declare dso_local i32 @nic_unregister_interrupts(%struct.nicpf*) #1

declare dso_local i32 @nicpf_free_res(%struct.nicpf*) #1

declare dso_local i32 @pci_disable_busmaster(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
